@@ -1,3 +1,13 @@
+2013-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	Simplify the tab line control so as not to consume CPU.
+	Thanks to Michael Heerdegen for good suggestions.
+
+	* w3m-ems.el (w3m-tab-line-format, w3m-tab-timer): Abolish.
+	(w3m-tab-mouse-track-selected-tab): Run `w3m-tab-line' instead of using
+	its cache; remove unused argument `buffers'.
+	(w3m-tab-line): Don't use chache and timer.
+
 2013-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	Replace `w3m-external-view-current-url', `w3m-external-view-this-url',
